--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="logo.png" />
-    <title>반응정리 list</title>
+    <title>반응정리</title>
     <meta content="eisiseu" property="og:title" />
-    <meta content="반응정리 list, 테스트용." property="og:description" />
+    <meta content="반응정리 테스트용." property="og:description" />
     <meta content="https://eisiseu.github.io/" property="og:url" />
     <meta content="image.png" property="og:image" />
     <meta content="#ff6a28" data-react-helmet="true" name="theme-color" />
