--- a/index.html
+++ b/index.html
@@ -28,6 +28,24 @@
             </button>
         </div>
 
+        <div class="cafe-button">
+            <button class="main-btn1" id="cafe-button" type="button">
+                <div class="logo-content">
+                    <img class="cafe-logo" src="cafe-logo.png" alt="이미지">
+                    <span class="cafe-text">카페 바로가기</span>
+                </div>
+            </button>
+        </div>
+
+        <div class="youtube-button">
+            <button class="main-btn2" id="youtube-button" type="button">
+                <div class="logo-content">
+                    <img class="youtube-logo" src="youtube-logo.png" alt="이미지">
+                    <span class="youtube-text">원본 영상 바로가기</span>
+                </div>
+            </button>
+        </div>
+
         <div class="change-screen-button-container">
             <button class="change-screen-button-container" id="change-size-btn" type="button">
                 <img src="top.png" alt="이미지">
@@ -39,7 +57,11 @@
                 <img src="logo.png" alt="이미지">
             </button>
         </div>
-        
+
+        <div class="image-box">
+
+        </div>
+
     </div>
 
     <div class="footer">
@@ -47,6 +69,7 @@
             <span>&copy; 2024 eisiseu All rights reserved.</span>
         </div>
     </div>
+
 </body>
 
 </html>
